--- a/src/app/component/producto/producto.admin.edit.routed/producto.admin.edit.routed.component.css
+++ b/src/app/component/producto/producto.admin.edit.routed/producto.admin.edit.routed.component.css
@@ -140,3 +140,23 @@
     font-size: 0.9rem;
   }
 }
+
+
+.is-invalid {
+  border: 2px solid red !important;
+  box-shadow: 0 0 5px red;
+}
+
+input[type="file"] {
+  border: 1px solid #ccc;
+  padding: 6px;
+}
+
+.btn-close {
+  opacity: 0.8;
+}
+
+.btn-close:hover {
+  opacity: 1;
+}
+
