--- a/src/app/component/producto/producto.admin.edit.routed/producto.admin.edit.routed.component.html
+++ b/src/app/component/producto/producto.admin.edit.routed/producto.admin.edit.routed.component.html
@@ -13,16 +13,13 @@
             <div class="row g-3">
               <!-- Bucle dinámico para todos los campos -->
               <div class="col-md-4" *ngFor="let campo of camposProducto">
-                <label class="form-label fw-bold text-capitalize">{{
-                  campo
-                }}</label>
-
+                <label class="form-label fw-bold text-capitalize">{{ campo }}</label>
                 <ng-container [ngSwitch]="campo">
                   <select
                     *ngSwitchCase="'status'"
                     class="form-select"
-                    formControlName="status"
-                  >
+                    [ngClass]="{ 'is-invalid': isFieldInvalid(campo) }"
+                    formControlName="status">
                     <option [value]="1">1</option>
                     <option [value]="2">2</option>
                     <option [value]="3">3</option>
@@ -31,12 +28,9 @@
                   <select
                     *ngSwitchCase="'paisOrigen'"
                     class="form-select"
-                    formControlName="paisOrigen"
-                  >
-                    <option
-                      *ngFor="let pais of paisesList"
-                      [value]="pais.codigo"
-                    >
+                    [ngClass]="{ 'is-invalid': isFieldInvalid(campo) }"
+                    formControlName="paisOrigen">
+                    <option *ngFor="let pais of paisesList" [value]="pais.codigo">
                       {{ pais.nombre }}
                     </option>
                   </select>
@@ -46,6 +40,7 @@
                     type="text"
                     class="form-control"
                     [formControlName]="campo"
+                    [ngClass]="{ 'is-invalid': isFieldInvalid(campo) }"
                   />
                 </ng-container>
               </div>
@@ -58,13 +53,10 @@
                   oProducto.imagenes &&
                   oProducto.imagenes.length > 0
                 "
-              >
+              > 
                 <label class="form-label fw-bold">Imágenes actuales</label>
                 <div class="d-flex flex-wrap gap-3 justify-content-center">
-                  <div
-                    *ngFor="let img of oProducto.imagenes"
-                    class="position-relative"
-                  >
+                  <div *ngFor="let img of oProducto.imagenes" class="position-relative">
                     <img
                       [src]="'http://localhost:8086' + img.imagenUrl"
                       alt="Imagen"
@@ -100,14 +92,9 @@
 
               <!-- Vista previa -->
               <div *ngIf="imagenPreviews.length > 0" class="col-12 text-center">
-                <label class="form-label fw-bold"
-                  >Vista previa de imágenes nuevas</label
-                >
+                <label class="form-label fw-bold">Vista previa de imágenes nuevas</label>
                 <div class="d-flex flex-wrap gap-2 justify-content-center">
-                  <div
-                    *ngFor="let preview of imagenPreviews; let i = index"
-                    class="position-relative"
-                  >
+                  <div *ngFor="let preview of imagenPreviews; let i = index" class="position-relative">
                     <img
                       [src]="preview"
                       alt="Vista previa"
@@ -127,17 +114,10 @@
               </div>
 
               <div class="text-center mt-4">
-                <a
-                  routerLink="/admin/producto/plist"
-                  class="btn btn-secondary me-4"
-                >
+                <a routerLink="/admin/producto/plist" class="btn btn-secondary me-4">
                   <i class="bi bi-arrow-left"></i> Volver
                 </a>
-                <button
-                  type="submit"
-                  class="btn btn-success"
-                  [disabled]="oProductoForm.invalid"
-                >
+                <button type="submit" class="btn btn-success" [disabled]="oProductoForm.invalid">
                   <i class="bi bi-save"></i> Guardar
                 </button>
               </div>
@@ -146,39 +126,21 @@
         </div>
 
         <!-- Modal -->
-        <div
-          class="modal fade"
-          id="mimodal"
-          tabindex="-1"
-          aria-labelledby="modalLabel"
-          aria-hidden="true"
-        >
+        <div class="modal fade" id="mimodal" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
           <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
               <div class="modal-header">
                 <h5 class="modal-title" id="modalLabel">Aviso</h5>
-                <button
-                  type="button"
-                  class="btn-close"
-                  data-bs-dismiss="modal"
-                  aria-label="Cerrar"
-                ></button>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
               </div>
-              <div class="modal-body">
-                {{ strMessage }}
-              </div>
+              <div class="modal-body">{{ strMessage }}</div>
               <div class="modal-footer">
-                <button
-                  type="button"
-                  class="btn btn-primary"
-                  (click)="hideModal()"
-                >
-                  Aceptar
-                </button>
+                <button type="button" class="btn btn-primary" (click)="hideModal()">Aceptar</button>
               </div>
             </div>
           </div>
         </div>
+
       </div>
     </div>
   </div>
